# nem-vibeaton-ai-liens

./: .claudeignore  .geminiignore  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  WORKFLOW.md  reusable_prompt.md  setub-libs-taks.md  workflow-diagram.html
.agents-ignore/_coordination.archive/: README.md
.agents-ignore/_coordination.archive/engine/: PROGRESS.md
.agents-ignore/_coordination.archive/renderer/: TASKS.md
.agents-ignore/docs/archived-IGNORE/: Blueprint Open Issues Analysis.md  visual_improvements_implementation_audit.md
.agents-ignore/presentation/: cheat-sheet.md
.agents-ignore/speckit-specs/001-sokol-render-engine/: research.md
.agents-ignore/speckit-specs/002-ecs-physics-engine/: spec.md
.agents-ignore/speckit-specs/003-space-shooter-mvp/: plan.md  quickstart.md
.agents/skills/cgltf-loading/: SKILL.md
.agents/skills/cgltf-loading_1/: SKILL.md
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/doc-updater/: SKILL.md
.agents/skills/engine-specialist/: SKILL.md
.agents/skills/entt-ecs/: SKILL.md
.agents/skills/entt-ecs_1/: SKILL.md
.agents/skills/feature-planner/: SKILL.md
.agents/skills/game-developer/: SKILL.md
.agents/skills/glsl-patterns/: SKILL.md
.agents/skills/physics-euler/: SKILL.md
.agents/skills/plan-groomer/: SKILL.md
.agents/skills/planning-loop-retrospector/: SKILL.md
.agents/skills/renderer-specialist/: SKILL.md
.agents/skills/review-loop-retrospector/: SKILL.md
.agents/skills/skill-creator/: SKILL.md
.agents/skills/sokol-api/: SKILL.md
.agents/skills/sokol-shdc/: SKILL.md
.agents/skills/sokol-shdc_1/: SKILL.md
.agents/skills/spec-validator/: SKILL.md
.agents/skills/test-author/: SKILL.md
.claude/: skills
.gemini/: settings.json
.github/: copilot-instructions.md
.github/hooks/: graphify.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
_coordination/: README.md
_coordination.archive/game/: PROGRESS.md  TASKS.md
_coordination.archive/overview/: BLOCKERS.md  MASTER_TASKS.md  MERGE_QUEUE.md  PROGRESS.md
_coordination/engine/: PROGRESS.md  TASKS.md
_coordination/game/: PROGRESS.md  TASKS.md
_coordination/overview/: ASSESSMENT-gltf-texture-extraction.md  BLOCKERS.md  MASTER_TASKS.md  PROGRESS.md
_coordination/queues/: REVIEW_QUEUE.md  TEST_QUEUE.md  VALIDATION_QUEUE.md
_coordination/renderer/: PROGRESS.md  TASKS.md
assets/: Asteroid_1e.glb
cmake/: paths.h.in
docs/: human-supervisor-runbook.md
docs/architecture/: ARCHITECTURE.md  engine-architecture.md  game-architecture.md  renderer-architecture.md
docs/game-design/: GAME_DESIGN.md  game-workstream-design.md
docs/interfaces/: INTERFACE_SPEC.md  engine-interface-spec.md  game-interface-spec.md  renderer-interface-spec.md
docs/presentation/: slides.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
models/: Asteroid_1a.glb  Asteroid_2a.glb  Asteroid_2b.glb  spaceship2.glb
pre_planning_docs/: Game Concept and Milestones.md  Game Engine Concept and Milestones.md  Hackathon Master Blueprint.md  Milestones Feasibility Review.md  Milestones_MVPs_Concepts.md  Renderer Concept and Milestones.md  Renderer Specialist SKILL Audit & Compaction.md  Ubuntu install list.md  Vibe Coding Hackathon Master Blueprint (Iteration 8).md  game-developer-skill-compaction.md  prompt.md  swept-aabb-convex-hull-collision.md
pre_planning_docs/archived-IGNORE/: Agent Action Items - Post Validation.md  Agent Handoff Prompt.md  Vibe Coding Hackathon Master Blueprint (Iteration 8) - Additional Review Findings.md  Vibe Coding Hackathon Master Blueprint (Iteration 8) - Review Findings.md  engine-specialist-skill-compaction.md  proposed-edits-agents.md
pre_planning_docs/libs/: setub-libs-tasks.md
pre_planning_docs/next-gen-tasks/: aim-system-v2.md  camera-rig-v2.md  visual-improvements.md
pre_planning_docs/todo/: code-reviewer-skill-compaction.md  spec-validator-skill-compaction.md  test-author-skill-compaction.md
shaders/game/: plasma_ball.glsl  shield.glsl
shaders/renderer/: blinnphong.glsl  blinnphong_shadowed.glsl  lambertian.glsl  line_quad.glsl  magenta.glsl  shadow_debug.glsl  shadow_depth.glsl  skybox.glsl  unlit.glsl
specs/001-sokol-render-engine/: data-model.md  plan.md  spec.md  tasks.md
specs/002-ecs-physics-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-space-shooter-mvp/: research.md
src/engine/: asset_bridge.cpp  asset_bridge.h  asset_import.cpp  asset_import.h  camera.cpp  camera.h  collider.cpp  collider.h  collision_response.cpp  collision_response.h  components.h  convex_hull.cpp  convex_hull.h  engine.cpp  engine.h  engine_time.h  input.cpp  input.h  math_utils.h  obj_import.cpp  obj_import.h  physics.cpp  physics.h  raycast.cpp  raycast.h  scene_api.cpp  scene_api.h  time.cpp
src/game/: .game.cpp.swp  asteroid_field.cpp  asteroid_field.h  camera_rig.cpp  camera_rig.h  components.h  constants.h  damage.cpp  damage.h  enemy_ai.cpp  enemy_ai.h  game.cpp  game.h  game_shaders.cpp  game_shaders.h  hud.cpp  hud.h  main.cpp  player.cpp  player.h  projectile.cpp  projectile.h  shield_vfx.cpp  shield_vfx.h  spawn.cpp  spawn.h  vfx.cpp  vfx.h  weapons.cpp  weapons.h
src/renderer/: debug_draw.cpp  debug_draw.h  mesh_builders.cpp  mesh_builders.h  mesh_internal.h  pipeline_blinnphong.cpp  pipeline_blinnphong.h  pipeline_blinnphong_shadowed.cpp  pipeline_blinnphong_shadowed.h  pipeline_lambertian.cpp  pipeline_lambertian.h  pipeline_line_quad.cpp  pipeline_line_quad.h  pipeline_shadow.cpp  pipeline_shadow.h  pipeline_shadow_debug.cpp  pipeline_shadow_debug.h  pipeline_skybox.cpp  pipeline_skybox.h  pipeline_transparent.cpp  pipeline_transparent.h  pipeline_unlit.cpp  pipeline_unlit.h  renderer.cpp  renderer.h  renderer_mock.cpp  shadow_pass.cpp  shadow_pass.h  skybox.cpp  skybox.h  texture.cpp  texture.h
(+94 files in other folders)
